--- a/package.json
+++ b/package.json
@@ -22,13 +22,19 @@
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.8.1",
+    "@nestjs/cache-manager": "^1.0.0",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.0.3",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
+    "base32": "^0.0.7",
     "bcrypt": "^5.1.0",
+    "cache-manager": "^5.2.1",
+    "cache-manager-redis-store": "2.0.0",
     "crypto-js": "^4.1.1",
+    "ioredis": "^5.3.2",
     "mongoose": "^6.8.3",
     "nest-winston": "^1.9.1",
     "nestjs-zod": "^2.2.0",
@@ -45,6 +51,8 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/cache-manager": "^4.0.2",
+    "@types/cache-manager-redis-store": "^2.0.1",
     "@types/crypto-js": "^4.1.1",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
