--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/jwt": "^10.0.3",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
+    "africastalking": "^0.6.2",
     "base32": "^0.0.7",
     "bcrypt": "^5.1.0",
     "cache-manager": "^5.2.1",
@@ -37,13 +38,16 @@
     "ioredis": "^5.3.2",
     "mongoose": "^6.8.3",
     "nest-winston": "^1.9.1",
+    "nestjs-joi": "^1.9.0",
     "nestjs-zod": "^2.2.0",
     "nodemailer": "^6.9.1",
+    "otp-generator": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "remove": "^0.1.5",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "speakeasy": "^2.0.0",
+    "uuid": "^9.0.0",
     "winston": "^3.8.2"
   },
   "devDependencies": {
@@ -56,8 +60,10 @@
     "@types/crypto-js": "^4.1.1",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
+    "@types/joi": "^17.2.3",
     "@types/node": "^16.0.0",
     "@types/nodemailer": "^6.4.7",
+    "@types/otp-generator": "^4.0.0",
     "@types/speakeasy": "^2.0.7",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
