Fixed global caching, set-up cache-service, code improvements

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.0.3",
     "@nestjs/mongoose": "^9.2.1",
-    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-express": "^9.4.3",
     "africastalking": "^0.6.2",
     "base32": "^0.0.7",
     "bcrypt": "^5.1.0",
@@ -37,6 +37,7 @@
     "crypto-js": "^4.1.1",
     "ioredis": "^5.3.2",
     "mongoose": "^6.8.3",
+    "multer": "^1.4.5-lts.1",
     "nest-winston": "^1.9.1",
     "nestjs-joi": "^1.9.0",
     "nestjs-zod": "^2.2.0",
