--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "crypto-js": "^4.1.1",
     "ioredis": "^5.3.2",
     "mongoose": "^6.8.3",
+    "mongoose-gridfs": "^1.3.0",
     "multer": "^1.4.5-lts.1",
     "nest-winston": "^1.9.1",
     "nestjs-joi": "^1.9.0",
