grades del & update ops completed. testing the ops for bugs pending..

--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/event-emitter": "^2.0.0",
     "@nestjs/jwt": "^10.0.3",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.4.3",
+    "@nestjs/schedule": "^3.0.1",
     "africastalking": "^0.6.2",
     "base32": "^0.0.7",
     "bcrypt": "^5.1.0",
@@ -59,6 +61,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cache-manager": "^4.0.2",
     "@types/cache-manager-redis-store": "^2.0.1",
+    "@types/cron": "^2.0.1",
     "@types/crypto-js": "^4.1.1",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
