--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "speakeasy": "^2.0.0",
+    "ulid": "^2.3.0",
     "uuid": "^9.0.0",
     "winston": "^3.8.2"
   },
