--- a/package.json
+++ b/package.json
@@ -21,14 +21,13 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/cache-manager": "^1.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/event-emitter": "^2.0.0",
     "@nestjs/jwt": "^10.0.3",
-    "@nestjs/mongoose": "^9.2.1",
+    "@nestjs/mongoose": "^10.0.0",
     "@nestjs/platform-express": "^9.4.3",
     "@nestjs/schedule": "^3.0.1",
     "africastalking": "^0.6.2",
@@ -38,13 +37,12 @@
     "cache-manager-redis-store": "2.0.0",
     "crypto-js": "^4.1.1",
     "ioredis": "^5.3.2",
-    "mongoose": "^6.8.3",
+    "mongoose": "^7.3.4",
     "mongoose-gridfs": "^1.3.0",
     "multer": "^1.4.5-lts.1",
     "nest-winston": "^1.9.1",
     "nestjs-joi": "^1.9.0",
     "nestjs-zod": "^2.2.0",
-    "nodemailer": "^6.9.1",
     "otp-generator": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "remove": "^0.1.5",
@@ -52,7 +50,6 @@
     "rxjs": "^7.2.0",
     "speakeasy": "^2.0.0",
     "ulid": "^2.3.0",
-    "uuid": "^9.0.0",
     "winston": "^3.8.2"
   },
   "devDependencies": {
@@ -68,7 +65,7 @@
     "@types/jest": "28.1.8",
     "@types/joi": "^17.2.3",
     "@types/node": "^16.0.0",
-    "@types/nodemailer": "^6.4.7",
+    "@types/nodemailer": "^6.4.8",
     "@types/otp-generator": "^4.0.0",
     "@types/speakeasy": "^2.0.7",
     "@types/supertest": "^2.0.11",
@@ -80,6 +77,7 @@
     "jest": "28.1.3",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
+    "supabase": "^1.115.4",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.8",
     "ts-loader": "^9.2.3",
